@@ -17,10 +17,12 @@ remove = strict
 remove = warnings
 remove = utf8
 remove = lib
+remove = base
 remove = Scalar::Util
 remove = Carp
 remove = Encode
 remove = FindBin
+remove = Exporter
 
 ; comes with mojo
 remove = Mojo::Server::Daemon
